--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,9 @@
     <title>Groupinisation</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
-    <script type="text/javascript" src="knn.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="knn.js"></script>
   </head>
   <body>
     <h1>Groupinisation</h1>
