--- a/public/index.html
+++ b/public/index.html
@@ -8,13 +8,20 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.7.3/socket.io.js"></script>
     <script type="text/javascript" src="index.js"></script>
+    <script type="text/javascript" src="load_audio.js"></script>
     <script type="text/javascript" src="knn.js"></script>
   </head>
   <body>
-    <h1>Groupinisation</h1>
-    <!-- <form>
-      <input type="text" id="username" placeholder="enter user alias">
-      <input type="button" value="enter" id="signup"></input>
-    </form> -->
+    <div id="selection_page">
+      <h1>Select an artist you like</h1>
+      <ul>
+        <li>Hans Zimmer</li>
+        <li>Beyonce</li>
+      </ul>
+    </div>
+    <div id="player_page">
+      <h1>Player</h1>
+      <audio id = "player" src="" controls autoplay loop = "true"></audio>
+    </div>
   </body>
 </html>
