Changed the audio source to mp3 from webm to make it work with Safari

--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
                 </div>
                 <p>Neighborhood Preference:</p>
                 <h1></h1>
-                <audio id="player" src="" controls autoplay loop="true" currentTime="12"></audio>
+                <audio id="player" src="" controls autoplay="true" loop="true"></audio>
             </div>
         </div>
     </div>
