--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,8 @@
     <div id="player_page">
         <div id="loading">
             <h1></h1>
-            <p>Scanning neighborhood to play their music for you...</p>
+            <p>Scanning neighborhood to play their music for you</p>
+            <p id="ellipsis"></p>
         </div>
         <div id="playing">
             <div id="transp_layer">
